WIP: Eliminate RestconfError
This class is supersded by upstrean, update interfaces to maps.

// FIXME: finish up migration

JIRA: NETCONF-793
Change-Id: I59dee93682533d844e11116cabaefd94971b0c19
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>